fixed chrome gap issue with sidebar

--- a/v1/css/styles.css
+++ b/v1/css/styles.css
@@ -117,6 +117,7 @@ html, body, container, main {
 
 #content-wrap {
 	width: 100%;
+	overflow:auto;
 }
 
 #content {
@@ -774,7 +775,7 @@ input.button {
 
 
 #checklist {
-	width: 68%;
+	width: 67%;
 	padding-left:20px;
 	float: left;
 	overflow:auto;
@@ -793,7 +794,7 @@ input.button {
 /*** Section Body Styles ***/
 .section-info {
 	float: left;
-	width: 66%;
+	width: 65%;
 	padding: 0 20px 0 20px;
 }
 
@@ -812,9 +813,10 @@ input.button {
 	min-height: 600px; /* how to match content height? */
 	width: 30%;
 	background-color:#3C4B5B;
-	margin-top:-40px;
+	margin-top: -40px;
 	margin-bottom: -40px;
 	padding-top: 0px;
+	overflow:auto;
 }
 
 
